<resources>
    <string name="app_name">CineSete</string>

    <!-- Fragments title -->
    <string name="fragment_home_title">Home</string>
    <string name="fragment_explore_title">Explore</string>

    <!-- Home sessions -->
    <string name="trending_text">Trending</string>
    <string name="coming_up_title">Coming soon</string>
    <string name="playing_now_title">New releases</string>

    <!-- Bottom menu items -->
    <string name="home">Home</string>
    <string name="explore">Explore</string>

    <!-- Images description -->
    <string name="movie_cover_description">Movie cover</string>
    <string name="tranding_icon_description">An arrow going to up</string>
    <string name="icon_back">An arrow pointing to the left</string>
    <string name="app_logo">App logo and CineSete write</string>

    <!-- Movie details Screen -->
    <string name="imdb_logo">IMDB logo</string>
    <string name="generic_description">Some description here</string>
    <string name="separator_bullet">•</string>
    <string name="overview_label">Overview</string>
    <string name="budget_label">Budget:</string>
    <string name="available_on_label">Available on</string>
    <string name="directors_label">Director(s):</string>
    <string name="stars_label">Stars:</string>
    <string name="see_all">See all</string>
    <string name="companies_label">Companies:</string>
    <string name="movies_sequence_label">Movies sequence</string>

    <string name="movie_details_availableon_message">We don\'t have any data about streaming platform yet</string>
    <string name="movie_details_directors_message">We don\'t have any data about directors yet</string>
    <string name="movie_details_stars_message">We don\'t have any data about actors yet</string>
    <string name="movie_details_companies_message">We don\'t have any data about companies yet</string>

    <!-- People and Companies Screen -->
    <string name="fragment_actors_title">Actors</string>

    <!-- Filters -->
    <string name="filter_type_orderby">Order by</string>
    <string name="filter_type_genres">Genres</string>
    <string name="filter_type_people">People</string>
    <string name="filter_type_companies">Companies</string>
    <string name="filter_type_years">Years</string>
    <string name="explore_movies_didnt_find">Sorry. We couldn\'t find any results for your filter combination :(</string>

    <!-- Order by options -->
    <string name="fragment_orderby_title">Order by</string>
    <string name="orderby_most_popular">Most popular</string>
    <string name="orderby_highest_rating">Highest rating</string>
    <string name="orderby_latest_release">Latest release</string>
    <string name="orderby_highest_revenue">Highest revenue</string>
    <string name="filter_button_apply">Apply</string>

    <!-- Genre filter -->
    <string name="fragment_genres_title">Genres</string>

    <!-- People filter -->
    <string name="fragment_people_title">People</string>
    <string name="selected_actors_title">People selected</string>
    <string name="popular_actors_title">Popular people</string>
    <string name="filter_people_select_instructions">Select someone to filter the movies that they participated. If you choose more than one, we\'ll try to find movies that they worked toguether!</string>
    <string name="search_person_hint">Search by name</string>

    <!-- Runtime labels -->
    <string name="filter_runtime_short">Short (shorter than 40min)</string>
    <string name="filter_runtime_medium">Medium (between 40min and 1h10min)</string>
    <string name="filter_runtime_long_default">Long default (between 1h10min and 2h10min)</string>
    <string name="filter_runtime_longest">Longer duration (longer than 2h10)</string>
    <string name="fragment_filter_runtime_title">Duration</string>
    <string name="filter_reset">Reset</string>

    <!-- Alert dialog for filters confirm -->
    <string name="filter_alertdialog_title">Are you sure?</string>
    <string name="filter_alertdialog_message">Do you want to continue? You\'ll lose your changes.</string>
    <string name="filter_alertdialog_positive">Continue</string>
    <string name="filter_alertdialog_negative">Cancel</string>

    <!-- People details -->
    <string name="age_label">• %s years old</string>
    <string name="biography_label">Biography</string>
    <string name="movies_with_label">Movies with this person</string>
    <string name="seach_label">Search</string>
    <string name="edittext_search_hint">Search by movie title</string>

    <!-- Menu -->
    <string name="menu">Menu</string>
    <string name="icon_arrow_forward_description">Arrow pointing to right direction</string>
    <string name="data_provided_by_label">Data provided by</string>
    <string name="the_movie_db_logo">The movie db logo</string>
    <string name="version">Version</string>

    <!-- Menu options -->
    <string name="my_lists">My Lists</string>
    <string name="about_developer">About the developer</string>
    <string name="settings">Settings</string>
    <string name="add_icon">Add icon</string>
    <string name="add_to_list">Add to list</string>
    <string name="saved_to_list">Saved</string>

    <string name="my_lists_form_new_instruction">Choose a name for your new list</string>
    <string name="new_list_dialog_title">Create new list</string>
    <string name="new_list_dialog_hint">List name</string>
    <string name="new_list_dialog_button">Create</string>
    <string name="bottomsheet_title">Choose the list</string>

    <string name="movie_saved_successfully_message">Saved on</string>
    <string name="movie_removed_successfully_message">Removed from</string>
    <string name="list_deleted_successfully_message">List deleted</string>

    <string name="delete_my_list">Delete</string>
    <string name="edit_my_list">Edit</string>


    <string name="filter_alertdialog_delete_mylist_message">Do you want to continue? You\'ll delete the list and lose all saved movies.</string>

    <string name="lorem_ipsum" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In orci ligula, mollis ut gravida et, vehicula finibus lorem. Ut tempor eget elit quis imperdiet. Integer massa massa, suscipit vitae iaculis sed, imperdiet in neque. Vestibulum sit amet eros sem. Fusce faucibus semper quam et mollis. Nulla condimentum rhoncus felis. In.</string>

    <!-- About developer -->
    <string name="developer_name" translatable="false">Claudio Galvão</string>
    <string name="developer_job_position">Mobile Developer</string>
    <string name="developer_my_website">My website</string>
    <string name="developer_instagram" translatable="false">Instagram</string>
    <string name="developer_linkedin" translatable="false">LinkedIn</string>
    <string name="developer_description">Hello, my name is Claudio, I\'m 25 years old and I graduated from PUC-Campinas with a degree in IT. My first job in IT was in 2016 (when I was 19 years old). I always loved technology but, who doesn\'t?\n
        I decided to develop this app because I love movies and, as a real cinema and technology lover, I started to develop this app with the intent to give access to the data of film productions easily and intuitively.
        \nI hope that you are enjoying the app and that this app has been useful to you. This is the first version and my intent is to release improvements and new features based on users opinions. Until then, follow me on social media.

        \n\nSee you</string>

    <string name="search_movies_didnt_find">Sorry. We couldn\'t find any results for your research :(</string>


    <!-- Default value for pre populate My Lists -->
    <string name="my_lists_favorites">Favorites</string>
    <string name="my_lists_watch_later">Watch Later</string>

    <!-- Oscar Categories -->
    <string name="oscar_best_picture">Best picture</string>
    <string name="oscar_best_foreign_language_film">Best foreign-language film</string>
    <string name="oscar_best_directing">Best directing</string>
    <string name="oscar_best_actress">Best actress</string>
    <string name="oscar_best_actor">Best actor</string>
    <string name="oscar_best_supporting_actress">Best supporting actress</string>
    <string name="oscar_best_supporting_actor">Best supporting actor</string>
    <string name="oscar_best_adapted_screenplay">Best adapted screenplay</string>
    <string name="oscar_best_original_screenplay">Best original screenplay</string>
    <string name="oscar_best_costume_design">Best costume design</string>
    <string name="oscar_best_original_score">Best original score</string>
    <string name="oscar_best_animated_feature_film">Best animated feature film</string>
    <string name="oscar_best_animated_short">Best animated short</string>
    <string name="oscar_best_live_action_short">Best live-action short</string>
    <string name="oscar_best_documentary_feature">Best documentary feature</string>
    <string name="oscar_best_documentary_short">Best documentary short</string>
    <string name="oscar_best_sound_mixing">Best sound mixing</string>
    <string name="oscar_best_original_song">Best original song</string>
    <string name="oscar_best_makeup_and_hairstyling">Best makeup and hairstyling</string>
    <string name="oscar_best_visual_effects">Best visual effects</string>
    <string name="oscar_best_cinematography">Best cinematography</string>
    <string name="oscar_best_editing">Best editing</string>
    <string name="oscar_best_production_design">Best production design</string>

    <string name="oscar_event_date">March 27</string>
    <string name="oscar_list_title">Oscar Nominees 2022</string>

    <!-- Oscar Movie Titles -->
    <string name="oscar_best_picture_dont_look_up">Don\'t look up</string>
    <string name="oscar_best_picture_dune">Dune</string>
    <string name="oscar_best_power_dog">The Power of the Dog</string>
    <string name="oscar_best_coda">CODA</string>
    <string name="oscar_king_richard">King Richard</string>
    <string name="oscar_nightmare_alley">Nightmare Alley</string>
    <string name="oscar_west_side_story">West Side Story</string>
    <string name="oscar_flee">Flee</string>
    <string name="oscar_hand_god">The Hand of God</string>
    <string name="oscar_lunana">Lunana: A Yak in the Classroom</string>
    <string name="oscar_worst_person">The worst person in the world</string>
    <string name="oscar_eyes_tammy">The Eyes of Tammy Faye</string>
    <string name="oscar_lost_daughter">The Lost Daughter</string>
    <string name="oscar_parallel_mothers">Parallel Mothers</string>
    <string name="oscar_being_ricardos">Being the Ricardos</string>
    <string name="oscar_tragedy_macbeth">The Tragedy of Macbeth</string>
    <string name="oscar_mitchells_machines">The Mitchells vs. the Machines</string>
    <string name="oscar_raya_last_dragon">Raya and the Last Dragon</string>
    <string name="oscar_robin_robin">Robin Robin</string>
    <string name="oscar_summer_soul">Summer of Soul (…Or, When the Revolution Could Not Be Televised)</string>
    <string name="oscar_three_songs_benazir">Three Songs for Benazir</string>
    <string name="oscar_007_no_time_die">007: No Time to Die</string>
    <string name="oscar_four_good_days">Four Good Days</string>
    <string name="oscar_coming_2_america">Coming 2 America</string>
    <string name="oscar_house_gucci">House of Gucci</string>
    <string name="oscar_shang_chi_ten_rings">Shang-Chi and the Legend of the Ten Rings</string>
    <string name="oscar_spider_man_no_way_home">Spider-Man: No Way Home</string>

    <!-- Oscar International movies countries -->
    <string name="country_japan">Japan</string>
    <string name="country_denmark">Denmark</string>
    <string name="country_italy">Italy</string>
    <string name="country_bhutan">Bhutan</string>
    <string name="country_norway">Norway</string>

    <string name="oscar_winner_label">Winner</string>
</resources>