<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/filter_button_apply"
        android:layout_marginBottom="8dp">

        <RadioGroup
            android:id="@+id/fragment_filter_runtime_radiogroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="8dp"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/filter_runtime_short"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/white"
                android:paddingHorizontal="12dp"
                android:layoutDirection="rtl"
                android:text="@string/filter_runtime_short"/>

            <RadioButton
                android:id="@+id/filter_runtime_medium"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/white"
                android:paddingHorizontal="12dp"
                android:layoutDirection="rtl"
                android:text="@string/filter_runtime_medium"/>

            <RadioButton
                android:id="@+id/filter_runtime_long_default"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/white"
                android:paddingHorizontal="12dp"
                android:layoutDirection="rtl"
                android:text="@string/filter_runtime_long_default" />

            <RadioButton
                android:id="@+id/filter_runtime_longest"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/white"
                android:paddingHorizontal="12dp"
                android:layoutDirection="rtl"
                android:text="@string/filter_runtime_longest" />

        </RadioGroup>

    </ScrollView>

    <Button
        android:id="@+id/filter_button_apply"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/filter_button_apply"/>

</androidx.constraintlayout.widget.ConstraintLayout>