<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/fragment_about_developer_profile_photo_parent"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:cardCornerRadius="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp">

        <ImageView
            android:id="@+id/fragment_about_developer_profile_photo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/developer_profile_photo"
            tools:ignore="ContentDescription" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/fragment_about_developer_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/fragment_about_developer_profile_photo_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="4dp"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:text="@string/developer_name" />

    <TextView
        android:id="@+id/fragment_about_developer_job_position"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/fragment_about_developer_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingBottom="8dp"
        android:textColor="@color/primary_gray"
        android:textSize="11sp"
        android:text="@string/developer_job_position" />

    <LinearLayout
        android:id="@+id/fragment_about_developer_my_website_parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/fragment_about_developer_job_position"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/fragment_about_developer_instagram_social_media_parent"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        android:gravity="center">

        <androidx.cardview.widget.CardView
            android:id="@+id/fragment_about_developer_my_website_card"
            android:layout_width="35dp"
            android:layout_height="35dp"
            app:cardCornerRadius="18dp">

            <ImageView
                android:id="@+id/fragment_about_developer_my_website"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:adjustViewBounds="true"
                android:src="@drawable/website_logo"
                tools:ignore="ContentDescription" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textSize="11sp"
            android:textColor="@color/primary_gray"
            android:text="@string/developer_my_website" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/fragment_about_developer_instagram_social_media_parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/fragment_about_developer_job_position"
        app:layout_constraintStart_toEndOf="@+id/fragment_about_developer_my_website_parent"
        app:layout_constraintEnd_toStartOf="@+id/fragment_about_developer_linkedin_social_media_parent"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        android:gravity="center">

        <androidx.cardview.widget.CardView
            android:id="@+id/fragment_about_developer_instagram_social_media_card"
            android:layout_width="35dp"
            android:layout_height="35dp"
            app:cardCornerRadius="18dp">

            <ImageView
                android:id="@+id/fragment_about_developer_instagram_social_media_media"
                android:layout_width="35dp"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:adjustViewBounds="true"
                android:src="@drawable/instagram_logo"
                tools:ignore="ContentDescription" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textSize="11sp"
            android:textColor="@color/primary_gray"
            android:text="@string/developer_instagram"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/fragment_about_developer_linkedin_social_media_parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/fragment_about_developer_job_position"
        app:layout_constraintStart_toEndOf="@+id/fragment_about_developer_instagram_social_media_parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        android:gravity="center">

        <androidx.cardview.widget.CardView
            android:id="@+id/fragment_about_developer_linkedin_social_media_card"
            android:layout_width="35dp"
            android:layout_height="35dp"
            app:cardCornerRadius="18dp">

            <ImageView
                android:id="@+id/fragment_about_developer_linkedin_social_media"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:adjustViewBounds="true"
                android:src="@drawable/linkedin_logo"
                tools:ignore="ContentDescription" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textSize="11sp"
            android:textColor="@color/primary_gray"
            android:text="@string/developer_linkedin" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/fragment_about_developer_linkedin_social_media_parent"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="21dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:text="@string/developer_description" />

</androidx.constraintlayout.widget.ConstraintLayout>