<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/fragment_filter_people_and_companies_nestedscroll"
        android:layout_height="match_parent"
        android:layout_width="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/fragment_people_selected_parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                android:backgroundTint="@android:color/transparent"
                app:cardElevation="0dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/fragment_people_and_companies_actors_selected_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginTop="12dp"
                        android:layout_marginStart="16dp"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:nestedScrollingEnabled="true"
                        android:text="@string/selected_actors_title" />

                    <ImageView
                        android:id="@+id/director_chair_icon"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/ic_director_chair"
                        android:contentDescription="@string/generic_description"
                        app:layout_constraintTop_toBottomOf="@+id/fragment_people_and_companies_actors_selected_title"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginTop="12dp"
                        android:visibility="gone"
                        tools:visibility="visible"/>

                    <TextView
                        android:id="@+id/filter_select_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@+id/director_chair_icon"
                        android:layout_marginTop="4dp"
                        android:layout_marginHorizontal="28dp"
                        android:gravity="center"
                        android:textColor="@color/primary_gray"
                        android:textSize="14sp"
                        android:text="@string/filter_people_select_instructions"
                        android:visibility="gone"
                        tools:visibility="visible"/>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/fragment_people_and_companies_actors_selected_recyclerview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@+id/fragment_people_and_companies_actors_selected_title"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginHorizontal="6dp"
                        tools:visibility="gone"
                        tools:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                        tools:spanCount="3"
                        tools:itemCount="5"
                        tools:listitem="@layout/item_large_image_circle_with_title" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/fragment_people_and_companies_popular_actors_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/fragment_people_selected_parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="36dp"
                android:layout_marginStart="16dp"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@string/popular_actors_title" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/fragment_people_and_companies_popular_actors_recyclerview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/fragment_people_and_companies_popular_actors_title"
                android:layout_marginHorizontal="6dp"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:spanCount="3"
                tools:itemCount="12"
                tools:listitem="@layout/item_large_image_circle_with_title"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <androidx.cardview.widget.CardView
        android:id="@+id/filter_button_parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:backgroundTint="@color/primary_purple">

        <Button
            android:id="@+id/filter_button_apply"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginBottom="16dp"
            android:text="@string/filter_button_apply"/>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>