<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingStart="0dp"
    android:paddingEnd="12dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="300dp"
            android:layout_height="180dp"
            android:background="@color/primary_gray"
            app:cardCornerRadius="8dp">

            <ImageView
                android:id="@+id/principal_cover_image"
                android:layout_width="300dp"
                android:layout_height="180dp"
                android:contentDescription="@string/movie_cover_description"
                android:scaleType="centerCrop"
                android:adjustViewBounds="true"
                tools:src="@drawable/backdrop_example"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/gradient_gray"/>

            <TextView
                android:id="@+id/principal_cover_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                tools:text="Shang-Chi and the Legend of the Ten Rings" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="12dp"
                android:paddingHorizontal="6dp"
                android:background="@drawable/gradient_red" >

                <ImageView
                    android:id="@+id/principal_cover_trending_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:contentDescription="@string/tranding_icon_description"
                    app:srcCompat="@drawable/ic_baseline_trending_up_24" />

                <TextView
                    android:id="@+id/principal_cover_txt_trending"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toEndOf="@id/principal_cover_trending_icon"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginStart="6dp"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:text="@string/trending_text" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>